src/test/deca/context/valid/SansObjet/DeclVar-intInt.deca
// Description:
//    Declaration of a int variable with initialization.
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x = 3 ;
}
