src/test/deca/context/invalid/SansObjet/DeclVar-Lower-float-string-int.deca
// Description:
//    Declaration of a float variable using < operation between a string variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "World"; 
    int y = 2; 
    float z = "World" < 2; 
}
